# probatum

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DISCUSSION.md  Dockerfile  LICENSE  README.md  checks.yaml  cidx.toml  probatum.yaml
.cidx/: presets.toml
.github/workflows/: ci.yml  cidx.yml  release.yml
.probatum/: degraded-check.yaml  dev-check.yaml  hang-check.yaml  invalid-key.yaml  missing-log-check.yaml  selfcheck.yaml  sigint-check.yaml
checks/: broken-check.yaml  dev-check.yaml
demo-app/: app.py
demo-app/data/wal/: segment-0001.json  segment-0002.json  segment-0003.json  segment-0004.json
demo-app/tests/: portfree.py  run.sh
proofs/: dev-check.yaml
src/: capture.rs  diagnose.rs  http.rs  main.rs  manifest.rs  own.rs  runner.rs  verdict.rs
