[package]
name = "probatum"
version = "0.1.0"
edition = "2021"
description = "Test-oriented check runner: one config, embedded checks, only the failures that matter."
license = "MIT"

[dependencies]
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[profile.release]
strip = true
